@@ -16,17 +16,17 @@
 
 package com.navercorp.pinpoint.collector.receiver;
 
+import com.google.common.net.InetAddresses;
 import com.navercorp.pinpoint.collector.receiver.thrift.AddressFilterAdaptor;
 import com.navercorp.pinpoint.common.server.util.AddressFilter;
 import com.navercorp.pinpoint.common.server.util.IgnoreAddressFilter;
-import com.google.common.net.InetAddresses;
 import org.jboss.netty.channel.Channel;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
-import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
@@ -49,18 +49,18 @@ public class AddressFilterAdaptorTest {
         Channel ignoreChannel = mockChannel(ignore);
         AddressFilterAdaptor adaptor = new AddressFilterAdaptor(filter);
 
-        Assert.assertTrue(adaptor.accept(ignoreChannel));
+        Assertions.assertTrue(adaptor.accept(ignoreChannel));
     }
 
     @Test
     public void accept_reject() {
         String ignoreString = "10.0.0.1";
-        AddressFilter ignoreAddressFilter = new IgnoreAddressFilter(Collections.singletonList(ignoreString));
+        AddressFilter ignoreAddressFilter = new IgnoreAddressFilter(List.of(ignoreString));
 
         Channel ignoreChannel = mockChannel(ignore);
         AddressFilterAdaptor adaptor = new AddressFilterAdaptor(ignoreAddressFilter);
 
-        Assert.assertFalse(adaptor.accept(ignoreChannel));
+        Assertions.assertFalse(adaptor.accept(ignoreChannel));
     }
 
     private Channel mockChannel(InetAddress inetAddress) {
