@@ -16,14 +16,11 @@
 
 package com.navercorp.pinpoint.common.server.bo;
 
-import static org.junit.Assert.*;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
-import org.junit.Test;
-
-import com.navercorp.pinpoint.common.server.bo.ServiceInfoBo;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  * @author hyungil.jeong
@@ -33,14 +30,14 @@ public class ServiceInfoBoTest {
     @Test
     public void testByteArrayConversion() {
         // Given
-        final ServiceInfoBo testBo = createTestBo("testService", Arrays.asList("lib1", "lib2"));
+        final ServiceInfoBo testBo = createTestBo("testService", List.of("lib1", "lib2"));
         // When
         final byte[] serializedBo = testBo.writeValue();
         final ServiceInfoBo deserializedBo = new ServiceInfoBo.Builder(serializedBo).build();
         // Then
         assertEquals(testBo, deserializedBo);
     }
-    
+
     @Test
     public void testByteArrayConversionNullValues() {
         // Given
@@ -51,7 +48,7 @@ public class ServiceInfoBoTest {
         // Then
         assertEquals(testBo, deserializedBo);
     }
-    
+
     static ServiceInfoBo createTestBo(String serviceName, List<String> serviceLibs) {
         final ServiceInfoBo.Builder builder = new ServiceInfoBo.Builder();
         return builder.serviceName(serviceName).serviceLibs(serviceLibs).build();
