@@ -27,10 +27,9 @@ import com.navercorp.pinpoint.grpc.trace.PSpanChunk;
 import com.navercorp.pinpoint.grpc.trace.PSpanEvent;
 import com.navercorp.pinpoint.grpc.trace.PTransactionId;
 import com.navercorp.pinpoint.io.SpanVersion;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -38,9 +37,10 @@ import java.util.List;
  */
 public class CollectorGrpcSpanFactoryTest {
     private static final int MAX_SEQUENCE = 10;
-    
+
     private final GrpcSpanBinder binder = new GrpcSpanBinder();
     private final SpanEventFilter filter = new SequenceSpanEventFilter(MAX_SEQUENCE);
+
     private final AcceptedTimeService acceptedTimeService = new EmptyAcceptedTimeService(System.currentTimeMillis());
     private final GrpcSpanFactory factory = new CollectorGrpcSpanFactory(binder, filter, acceptedTimeService);
 
@@ -52,7 +52,7 @@ public class CollectorGrpcSpanFactoryTest {
         SpanChunkBo spanChunkBo = factory.buildSpanChunkBo(chunk, header);
 
         List<SpanEventBo> spanEventBoList = spanChunkBo.getSpanEventBoList();
-        Assert.assertTrue(spanEventBoList.isEmpty());
+        Assertions.assertTrue(spanEventBoList.isEmpty());
     }
 
     @Test
@@ -66,8 +66,8 @@ public class CollectorGrpcSpanFactoryTest {
 
         SpanEventBo spanEventBo0 = spanEventBoList.get(0);
         SpanEventBo spanEventBo1 = spanEventBoList.get(1);
-        Assert.assertEquals(1, spanEventBo0.getDepth());
-        Assert.assertEquals(1, spanEventBo1.getDepth());
+        Assertions.assertEquals(1, spanEventBo0.getDepth());
+        Assertions.assertEquals(1, spanEventBo1.getDepth());
     }
 
     @Test
@@ -79,7 +79,7 @@ public class CollectorGrpcSpanFactoryTest {
 
         List<SpanEventBo> spanEventBoList = spanChunkBo.getSpanEventBoList();
         SpanEventBo spanEventBo0 = spanEventBoList.get(0);
-        Assert.assertEquals(1, spanEventBo0.getDepth());
+        Assertions.assertEquals(1, spanEventBo0.getDepth());
     }
 
     @Test
@@ -92,8 +92,8 @@ public class CollectorGrpcSpanFactoryTest {
         List<SpanEventBo> spanEventBoList = spanChunkBo.getSpanEventBoList();
         SpanEventBo spanEventBo0 = spanEventBoList.get(0);
         SpanEventBo spanEventBo1 = spanEventBoList.get(1);
-        Assert.assertEquals(0, spanEventBo0.getDepth());
-        Assert.assertEquals(1, spanEventBo1.getDepth());
+        Assertions.assertEquals(0, spanEventBo0.getDepth());
+        Assertions.assertEquals(1, spanEventBo1.getDepth());
     }
 
 
@@ -135,7 +135,7 @@ public class CollectorGrpcSpanFactoryTest {
     private PSpanChunk newSpanChunk(PSpanEvent... events) {
         PSpanChunk.Builder builder = PSpanChunk.newBuilder();
         builder.setVersion(SpanVersion.TRACE_V2);
-        builder.addAllSpanEvent(Arrays.asList(events));
+        builder.addAllSpanEvent(List.of(events));
         builder.setTransactionId(PTransactionId.getDefaultInstance());
         return builder.build();
     }
@@ -150,6 +150,7 @@ public class CollectorGrpcSpanFactoryTest {
 
 
     private Header newHeader() {
-        return new Header("agentId", "applicationName", 1000, 88);
+        return new Header("test", "agentId", "agentName", "applicationName", 1000, 88, -1, null);
     }
+
 }
