@@ -16,24 +16,24 @@
 
 package com.navercorp.pinpoint.common.server.bo.thrift;
 
-import com.google.common.collect.Lists;
+import com.navercorp.pinpoint.common.profiler.util.TransactionId;
+import com.navercorp.pinpoint.common.profiler.util.TransactionIdUtils;
 import com.navercorp.pinpoint.common.server.bo.LocalAsyncIdBo;
 import com.navercorp.pinpoint.common.server.bo.RandomTSpan;
 import com.navercorp.pinpoint.common.server.bo.SpanBo;
 import com.navercorp.pinpoint.common.server.bo.SpanChunkBo;
 import com.navercorp.pinpoint.common.server.bo.SpanEventBo;
 import com.navercorp.pinpoint.common.server.bo.SpanFactoryAssert;
-import com.navercorp.pinpoint.common.profiler.util.TransactionId;
-import com.navercorp.pinpoint.common.profiler.util.TransactionIdUtils;
+import com.navercorp.pinpoint.common.server.bo.filter.EmptySpanEventFilter;
+import com.navercorp.pinpoint.common.server.bo.filter.SpanEventFilter;
 import com.navercorp.pinpoint.thrift.dto.TSpan;
 import com.navercorp.pinpoint.thrift.dto.TSpanChunk;
 import com.navercorp.pinpoint.thrift.dto.TSpanEvent;
 import org.apache.commons.lang3.RandomUtils;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 /**
  * @author Woonduk Kang(emeroad)
@@ -42,15 +42,18 @@ public class SpanFactoryTest {
 
     private static final int REPEAT_COUNT = 10;
 
+    private final long spanAcceptTime = System.currentTimeMillis();
+
     private final SpanFactory spanFactory = new SpanFactory();
+    private final SpanEventFilter filter = new EmptySpanEventFilter();
 
-    private SpanFactoryAssert spanFactoryAssert = new SpanFactoryAssert();
+    private final SpanFactoryAssert spanFactoryAssert = new SpanFactoryAssert();
 
-    private RandomTSpan random = new RandomTSpan();
+    private final RandomTSpan random = new RandomTSpan();
 
 
     @Test
-    public void testNewSpanBo() throws Exception {
+    public void testNewSpanBo() {
         TSpan tSpan = random.randomTSpan();
 
         SpanBo spanBo = spanFactory.newSpanBo(tSpan);
@@ -60,7 +63,7 @@ public class SpanFactoryTest {
 
 
     @Test
-    public void testNewSpanBo_N() throws Exception {
+    public void testNewSpanBo_N() {
         for (int i = 0; i < REPEAT_COUNT; i++) {
             testNewSpanBo();
         }
@@ -68,7 +71,7 @@ public class SpanFactoryTest {
 
 
     @Test
-    public void testNewSpanChunkBo() throws Exception {
+    public void testNewSpanChunkBo() {
         TSpanChunk tSpanChunk = random.randomTSpanChunk();
 
         SpanChunkBo spanChunkBo = spanFactory.newSpanChunkBo(tSpanChunk);
@@ -78,14 +81,14 @@ public class SpanFactoryTest {
     }
 
     @Test
-    public void testNewSpanChunkBo_N() throws Exception {
+    public void testNewSpanChunkBo_N() {
         for (int i = 0; i < REPEAT_COUNT; i++) {
             testNewSpanChunkBo();
         }
     }
 
     @Test
-    public void testNewSpanEventBo() throws Exception {
+    public void testNewSpanEventBo() {
 
         TSpanEvent tSpanEvent = random.randomTSpanEvent((short) RandomUtils.nextInt(0, 100));
         SpanEventBo spanEventBo = spanFactory.buildSpanEventBo(tSpanEvent);
@@ -95,29 +98,29 @@ public class SpanFactoryTest {
     }
 
     @Test
-    public void testNewSpanEventBo_N() throws Exception {
+    public void testNewSpanEventBo_N() {
         for (int i = 0; i < REPEAT_COUNT; i++) {
             testNewSpanEventBo();
         }
     }
 
     @Test
-    public void testBuildSpanBo() throws Exception {
+    public void testBuildSpanBo() {
         TSpan tSpan = random.randomTSpan();
-        TSpanEvent tSpanEvent1 = random.randomTSpanEvent((short)0);
-        TSpanEvent tSpanEvent2 = random.randomTSpanEvent((short)1);
-        TSpanEvent tSpanEvent3 = random.randomTSpanEvent((short)5);
-        TSpanEvent tSpanEvent4 = random.randomTSpanEvent((short)2);
-        tSpan.setSpanEventList(Lists.newArrayList(tSpanEvent1, tSpanEvent2, tSpanEvent3, tSpanEvent4));
+        TSpanEvent tSpanEvent1 = random.randomTSpanEvent((short) 0);
+        TSpanEvent tSpanEvent2 = random.randomTSpanEvent((short) 1);
+        TSpanEvent tSpanEvent3 = random.randomTSpanEvent((short) 5);
+        TSpanEvent tSpanEvent4 = random.randomTSpanEvent((short) 2);
+        tSpan.setSpanEventList(List.of(tSpanEvent1, tSpanEvent2, tSpanEvent3, tSpanEvent4));
 
-        SpanBo spanBo = spanFactory.buildSpanBo(tSpan);
+        SpanBo spanBo = spanFactory.buildSpanBo(tSpan, spanAcceptTime, filter);
 
         spanFactoryAssert.assertSpan(tSpan, spanBo);
 
     }
 
     @Test
-    public void testBuildSpanBo_N() throws Exception {
+    public void testBuildSpanBo_N() {
         for (int i = 0; i < REPEAT_COUNT; i++) {
             testBuildSpanBo();
         }
@@ -125,29 +128,29 @@ public class SpanFactoryTest {
 
 
     @Test
-    public void testBuildSpanChunkBo() throws Exception {
+    public void testBuildSpanChunkBo() {
         TSpanChunk tSpanChunk = random.randomTSpanChunk();
-        TSpanEvent tSpanEvent1 = random.randomTSpanEvent((short)0);
-        TSpanEvent tSpanEvent2 = random.randomTSpanEvent((short)1);
-        TSpanEvent tSpanEvent3 = random.randomTSpanEvent((short)5);
-        TSpanEvent tSpanEvent4 = random.randomTSpanEvent((short)2);
-        tSpanChunk.setSpanEventList(Lists.newArrayList(tSpanEvent1, tSpanEvent2, tSpanEvent3, tSpanEvent4));
+        TSpanEvent tSpanEvent1 = random.randomTSpanEvent((short) 0);
+        TSpanEvent tSpanEvent2 = random.randomTSpanEvent((short) 1);
+        TSpanEvent tSpanEvent3 = random.randomTSpanEvent((short) 5);
+        TSpanEvent tSpanEvent4 = random.randomTSpanEvent((short) 2);
+        tSpanChunk.setSpanEventList(List.of(tSpanEvent1, tSpanEvent2, tSpanEvent3, tSpanEvent4));
 
-        SpanChunkBo spanChunkBo = spanFactory.buildSpanChunkBo(tSpanChunk);
+        SpanChunkBo spanChunkBo = spanFactory.buildSpanChunkBo(tSpanChunk, spanAcceptTime, filter);
 
         spanFactoryAssert.assertSpanChunk(tSpanChunk, spanChunkBo);
 
     }
 
     @Test
-    public void testBuildSpanChunkBo_N() throws Exception {
+    public void testBuildSpanChunkBo_N() {
         for (int i = 0; i < REPEAT_COUNT; i++) {
             testBuildSpanChunkBo();
         }
     }
 
     @Test
-    public void testTransactionId_skip_agentId() throws Exception {
+    public void testTransactionId_skip_agentId() {
         TSpan tSpan = new TSpan();
         tSpan.setAgentId("agentId");
         byte[] transactionIdBytes = TransactionIdUtils.formatBytes(null, 1, 2);
@@ -156,13 +159,13 @@ public class SpanFactoryTest {
         SpanBo spanBo = spanFactory.newSpanBo(tSpan);
         TransactionId transactionId = spanBo.getTransactionId();
 
-        Assert.assertEquals(transactionId.getAgentId(), "agentId");
-        Assert.assertEquals(transactionId.getAgentStartTime(), 1);
-        Assert.assertEquals(transactionId.getTransactionSequence(), 2);
+        Assertions.assertEquals(transactionId.getAgentId(), "agentId");
+        Assertions.assertEquals(transactionId.getAgentStartTime(), 1);
+        Assertions.assertEquals(transactionId.getTransactionSequence(), 2);
     }
 
     @Test
-    public void testTransactionId_include_agentId() throws Exception {
+    public void testTransactionId_include_agentId() {
         TSpan tSpan = new TSpan();
         tSpan.setAgentId("agentId");
         byte[] transactionIdBytes = TransactionIdUtils.formatBytes("transactionAgentId", 1, 2);
@@ -171,37 +174,37 @@ public class SpanFactoryTest {
         SpanBo spanBo = spanFactory.newSpanBo(tSpan);
         TransactionId transactionId = spanBo.getTransactionId();
 
-        Assert.assertEquals(transactionId.getAgentId(), "transactionAgentId");
-        Assert.assertEquals(transactionId.getAgentStartTime(), 1);
-        Assert.assertEquals(transactionId.getTransactionSequence(), 2);
+        Assertions.assertEquals(transactionId.getAgentId(), "transactionAgentId");
+        Assertions.assertEquals(transactionId.getAgentStartTime(), 1);
+        Assertions.assertEquals(transactionId.getTransactionSequence(), 2);
     }
 
 
     @Test
-    public void testFastLocalAsyncIdBo() throws Exception {
+    public void testFastLocalAsyncIdBo() {
         int asyncId = 1;
         short asyncSequence = 0;
         TSpanEvent tSpanEvent = new TSpanEvent();
 
         tSpanEvent.setAsyncId(asyncId);
         tSpanEvent.setAsyncSequence(asyncSequence);
-        LocalAsyncIdBo localAsyncIdBo = spanFactory.fastLocalAsyncIdBo(Collections.singletonList(tSpanEvent));
+        LocalAsyncIdBo localAsyncIdBo = spanFactory.fastLocalAsyncIdBo(List.of(tSpanEvent));
 
-        Assert.assertEquals(localAsyncIdBo.getAsyncId(), asyncId);
-        Assert.assertEquals(localAsyncIdBo.getSequence(), asyncSequence);
+        Assertions.assertEquals(localAsyncIdBo.getAsyncId(), asyncId);
+        Assertions.assertEquals(localAsyncIdBo.getSequence(), asyncSequence);
     }
 
     @Test
-    public void testFastLocalAsyncIdBo_empty() throws Exception {
+    public void testFastLocalAsyncIdBo_empty() {
 
         TSpanEvent tSpanEvent = new TSpanEvent();
 
-        LocalAsyncIdBo localAsyncIdBo = spanFactory.fastLocalAsyncIdBo(Collections.singletonList(tSpanEvent));
-        Assert.assertNull(localAsyncIdBo);
+        LocalAsyncIdBo localAsyncIdBo = spanFactory.fastLocalAsyncIdBo(List.of(tSpanEvent));
+        Assertions.assertNull(localAsyncIdBo);
     }
 
     @Test
-    public void testFullScanLocalAsyncIdBo() throws Exception {
+    public void testFullScanLocalAsyncIdBo() {
         int asyncId = 1;
         short asyncSequence = 0;
         TSpanEvent tSpanEvent = new TSpanEvent();
@@ -209,23 +212,23 @@ public class SpanFactoryTest {
         tSpanEvent.setAsyncSequence(asyncSequence);
 
         TSpanChunk tSpanChunk = new TSpanChunk();
-        tSpanChunk.setSpanEventList(Arrays.asList(tSpanEvent, tSpanEvent));
+        tSpanChunk.setSpanEventList(List.of(tSpanEvent, tSpanEvent));
 
         LocalAsyncIdBo localAsyncIdBo = spanFactory.fullScanLocalAsyncIdBo(tSpanChunk);
 
-        Assert.assertEquals(localAsyncIdBo.getAsyncId(), asyncId);
-        Assert.assertEquals(localAsyncIdBo.getSequence(), asyncSequence);
+        Assertions.assertEquals(localAsyncIdBo.getAsyncId(), asyncId);
+        Assertions.assertEquals(localAsyncIdBo.getSequence(), asyncSequence);
     }
 
     @Test
-    public void testFullScanLocalAsyncIdBo_empty() throws Exception {
+    public void testFullScanLocalAsyncIdBo_empty() {
 
         TSpanEvent tSpanEvent = new TSpanEvent();
         TSpanChunk tSpanChunk = new TSpanChunk();
-        tSpanChunk.setSpanEventList(Arrays.asList(tSpanEvent, tSpanEvent));
+        tSpanChunk.setSpanEventList(List.of(tSpanEvent, tSpanEvent));
 
         LocalAsyncIdBo localAsyncIdBo = spanFactory.fullScanLocalAsyncIdBo(tSpanChunk);
-        Assert.assertNull(localAsyncIdBo);
+        Assertions.assertNull(localAsyncIdBo);
     }
 
 }
