@@ -16,12 +16,11 @@
 
 package com.navercorp.pinpoint.common.server.util;
 
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import java.net.InetAddress;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -29,18 +28,18 @@ import java.util.List;
  */
 public class IgnoreAddressFilterTest {
 
-    private final List<String> ignoreList = Arrays.asList("10.0.0.1", "10.0.0.2", "11.0.0.1");
-    private final List<String> successList = Arrays.asList("100.0.0.0", "10.0.1.1", "11.0.0.2");
+    private final List<String> ignoreList = List.of("10.0.0.1", "10.0.0.2", "11.0.0.1");
+    private final List<String> successList = List.of("100.0.0.0", "10.0.1.1", "11.0.0.2");
 
     @Test
     public void acceptTest() {
         final List<InetAddress> ignoreAddresses = InetAddressUtils.toInetAddressList(ignoreList);
 
-        List<String> copiedSuccessList = new ArrayList(successList);
+        List<String> copiedSuccessList = new ArrayList<>(successList);
         copiedSuccessList.add("10.0.0.3");
         final List<InetAddress> successAddresses = InetAddressUtils.toInetAddressList(copiedSuccessList);
 
-        final List<String> ignoreListForFilter = Arrays.asList("10.0.0.1", "10.0.0.2", "11.0.0.1");
+        final List<String> ignoreListForFilter = List.of("10.0.0.1", "10.0.0.2", "11.0.0.1");
 
         assertAddressFilter(ignoreListForFilter, ignoreAddresses, successAddresses);
     }
@@ -50,7 +49,7 @@ public class IgnoreAddressFilterTest {
         final List<InetAddress> ignoreAddresses = InetAddressUtils.toInetAddressList(ignoreList);
         final List<InetAddress> successAddresses = InetAddressUtils.toInetAddressList(successList);
 
-        final List<String> ignoreListForFilter = Arrays.asList("10.0.0.0/24", "11.0.0.1");
+        final List<String> ignoreListForFilter = List.of("10.0.0.0/24", "11.0.0.1");
 
         assertAddressFilter(ignoreListForFilter, ignoreAddresses, successAddresses);
     }
@@ -58,14 +57,14 @@ public class IgnoreAddressFilterTest {
     private void assertAddressFilter(List<String> ignoreFilterAddressList, List<InetAddress> ignoreAddresses, List<InetAddress> successAddresses) {
         AddressFilter filter = new IgnoreAddressFilter(ignoreFilterAddressList);
         for (InetAddress ignoreAddress : ignoreAddresses) {
-            Assert.assertFalse(filter.accept(ignoreAddress));
+            Assertions.assertFalse(filter.accept(ignoreAddress));
         }
 
         for (InetAddress successAddress : successAddresses) {
-            Assert.assertTrue(filter.accept(successAddress));
+            Assertions.assertTrue(filter.accept(successAddress));
         }
 
-        Assert.assertTrue(filter.accept(null));
+        Assertions.assertTrue(filter.accept(null));
     }
 
 }
