@@ -21,15 +21,13 @@ import org.apache.hadoop.hbase.HColumnDescriptor;
 import org.apache.hadoop.hbase.HTableDescriptor;
 import org.apache.hadoop.hbase.NamespaceDescriptor;
 import org.apache.hadoop.hbase.TableName;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * @author HyunGil Jeong
@@ -40,46 +38,44 @@ public class HtdHbaseSchemaVerifierTest {
 
     @Test
     public void emptyExpectedSchemas_shouldReturnTrue() {
-        List<HTableDescriptor> nullExpectedSchemas = null;
         List<HTableDescriptor> emptyExpectedSchemas = Collections.emptyList();
-        List<HTableDescriptor> actualSchemas = Arrays.asList(createHtd("table1", "table1_1"));
-        assertThat(verifier.verifySchemas(nullExpectedSchemas, actualSchemas), is(true));
-        assertThat(verifier.verifySchemas(emptyExpectedSchemas, actualSchemas), is(true));
+        List<HTableDescriptor> actualSchemas = List.of(createHtd("table1", "table1_1"));
+        assertThat(verifier.verifySchemas(null, actualSchemas)).isTrue();
+        assertThat(verifier.verifySchemas(emptyExpectedSchemas, actualSchemas)).isTrue();
     }
 
     @Test
     public void emptyActualSchemas_shouldReturnFalse() {
-        List<HTableDescriptor> nullActualSchemas = null;
         List<HTableDescriptor> emptyActualSchemas = Collections.emptyList();
-        List<HTableDescriptor> expectedSchemas = Arrays.asList(createHtd("table1", "table1_1"));
-        assertThat(verifier.verifySchemas(expectedSchemas, nullActualSchemas), is(false));
-        assertThat(verifier.verifySchemas(expectedSchemas, emptyActualSchemas), is(false));
+        List<HTableDescriptor> expectedSchemas = List.of(createHtd("table1", "table1_1"));
+        assertThat(verifier.verifySchemas(expectedSchemas, null)).isFalse();
+        assertThat(verifier.verifySchemas(expectedSchemas, emptyActualSchemas)).isFalse();
     }
 
     @Test
     public void exactMatch_shouldReturnTrue() {
-        List<HTableDescriptor> expectedSchemas = Arrays.asList(
+        List<HTableDescriptor> expectedSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
         List<HTableDescriptor> actualSchemas = copySchema(expectedSchemas);
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas), is(true));
+        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isTrue();
     }
 
     @Test
     public void excessiveTableNameMatch_shouldReturnTrue() {
-        List<HTableDescriptor> expectedSchemas = Arrays.asList(
+        List<HTableDescriptor> expectedSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
         List<HTableDescriptor> actualSchemas = copySchema(expectedSchemas);
         actualSchemas.add(createHtd("table4", "table4_1"));
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas), is(true));
+        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isTrue();
     }
 
     @Test
     public void excessiveColumnFamilyMatch_shouldReturnTrue() {
-        List<HTableDescriptor> expectedSchemas = Arrays.asList(
+        List<HTableDescriptor> expectedSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
@@ -87,23 +83,23 @@ public class HtdHbaseSchemaVerifierTest {
         for (HTableDescriptor htd : actualSchemas) {
             htd.addFamily(new HColumnDescriptor("newCF"));
         }
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas), is(true));
+        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isTrue();
     }
 
     @Test
     public void partialTableNameMatch_shouldReturnFalse() {
-        List<HTableDescriptor> actualSchemas = Arrays.asList(
+        List<HTableDescriptor> actualSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
         List<HTableDescriptor> expectedSchemas = copySchema(actualSchemas);
         expectedSchemas.add(createHtd("table4", "table4_1"));
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas), is(false));
+        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isFalse();
     }
 
     @Test
     public void partialColumnFamilyMatch_shouldReturnFalse() {
-        List<HTableDescriptor> actualSchemas = Arrays.asList(
+        List<HTableDescriptor> actualSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
@@ -111,21 +107,21 @@ public class HtdHbaseSchemaVerifierTest {
         for (HTableDescriptor htd : expectedSchemas) {
             htd.addFamily(new HColumnDescriptor("newCF"));
         }
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas), is(false));
+        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isFalse();
     }
 
     @Test
     public void tableNameMismatch_shouldReturnFalse() {
-        List<HTableDescriptor> expectedSchemas = Arrays.asList(createHtd("table1", "CF1"));
-        List<HTableDescriptor> actualSchemas = Arrays.asList(createHtd("table2", "CF1"));
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas), is(false));
+        List<HTableDescriptor> expectedSchemas = List.of(createHtd("table1", "CF1"));
+        List<HTableDescriptor> actualSchemas = List.of(createHtd("table2", "CF1"));
+        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isFalse();
     }
 
     @Test
     public void columnFamilyMismatch_shouldReturnFalse() {
-        List<HTableDescriptor> expectedSchemas = Arrays.asList(createHtd("table1", "CF1"));
-        List<HTableDescriptor> actualSchemas = Arrays.asList(createHtd("table1", "CF2"));
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas), is(false));
+        List<HTableDescriptor> expectedSchemas = List.of(createHtd("table1", "CF1"));
+        List<HTableDescriptor> actualSchemas = List.of(createHtd("table1", "CF2"));
+        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isFalse();
     }
 
     private HTableDescriptor createHtd(String tableQualifier, String... columnFamilyNames) {
