@@ -17,7 +17,6 @@
 package com.navercorp.pinpoint.web.filter;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -26,16 +25,18 @@ import java.util.Objects;
 
 import com.fasterxml.jackson.databind.ObjectReader;
 import com.navercorp.pinpoint.common.server.bo.SpanBo;
+
+import com.navercorp.pinpoint.common.util.StringUtils;
 import com.navercorp.pinpoint.loader.service.AnnotationKeyRegistryService;
 import com.navercorp.pinpoint.loader.service.ServiceTypeRegistryService;
-import org.apache.commons.lang3.StringUtils;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.core.type.TypeReference;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
 import org.springframework.stereotype.Component;
+import org.springframework.util.Assert;
 
 /**
  *
@@ -45,7 +46,7 @@ import org.springframework.stereotype.Component;
 @Component
 public class DefaultFilterBuilder implements FilterBuilder<List<SpanBo>> {
 
-    private final Logger logger = LoggerFactory.getLogger(this.getClass());
+    private final Logger logger = LogManager.getLogger(this.getClass());
 
     private final ObjectReader filterHintReader;
     private final ObjectReader filterDescriptorReader;
@@ -87,7 +88,7 @@ public class DefaultFilterBuilder implements FilterBuilder<List<SpanBo>> {
         logger.debug("build filter from string. {}", filterText);
 
 
-        if (!StringUtils.isEmpty(filterHint)) {
+        if (StringUtils.hasLength(filterHint)) {
             filterHint = decode(filterHint);
         } else {
             filterHint = FilterHint.EMPTY_JSON;
@@ -101,11 +102,8 @@ public class DefaultFilterBuilder implements FilterBuilder<List<SpanBo>> {
         if (value == null) {
             return null;
         }
-        try {
-            return URLDecoder.decode(value, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException e) {
-            throw new IllegalArgumentException("UTF8 decodeFail. value:" + value);
-        }
+
+        return URLDecoder.decode(value, StandardCharsets.UTF_8);
     }
 
     private Filter<List<SpanBo>> makeFilterFromJson(String jsonFilterText) {
@@ -113,9 +111,7 @@ public class DefaultFilterBuilder implements FilterBuilder<List<SpanBo>> {
     }
 
     private Filter<List<SpanBo>> makeFilterFromJson(String jsonFilterText, String jsonFilterHint) {
-        if (StringUtils.isEmpty(jsonFilterText)) {
-            throw new IllegalArgumentException("json string is empty");
-        }
+        Assert.hasLength(jsonFilterText, "jsonFilterText");
 
         final List<FilterDescriptor> filterDescriptorList = readFilterDescriptor(jsonFilterText);
         final FilterHint hint = readFilterHint(jsonFilterHint);
