@@ -19,20 +19,23 @@ package com.navercorp.pinpoint.web.filter;
 import com.navercorp.pinpoint.common.server.bo.AnnotationBo;
 import com.navercorp.pinpoint.common.server.bo.SpanBo;
 import com.navercorp.pinpoint.common.server.bo.SpanEventBo;
-import com.navercorp.pinpoint.loader.service.AnnotationKeyRegistryService;
-import com.navercorp.pinpoint.loader.service.ServiceTypeRegistryService;
 import com.navercorp.pinpoint.common.trace.AnnotationKey;
 import com.navercorp.pinpoint.common.trace.AnnotationKeyFactory;
 import com.navercorp.pinpoint.common.trace.ServiceType;
 import com.navercorp.pinpoint.common.trace.ServiceTypeFactory;
 import com.navercorp.pinpoint.common.trace.ServiceTypeProperty;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import com.navercorp.pinpoint.loader.service.AnnotationKeyRegistryService;
+import com.navercorp.pinpoint.loader.service.ServiceTypeRegistryService;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.mock;
 
 /**
  * @author HyunGil Jeong
@@ -48,40 +51,16 @@ public class RpcURLPatternFilterTest {
 
     private AnnotationKeyRegistryService annotationKeyRegistryService;
 
-    @Before
+    @BeforeEach
     public void setUp() {
-        serviceTypeRegistryService = new ServiceTypeRegistryService() {
-            @Override
-            public ServiceType findServiceType(short serviceType) {
-                return TEST_RPC_SERVICE_TYPE;
-            }
+        ServiceTypeRegistryService serviceType = mock(ServiceTypeRegistryService.class);
+        Mockito.when(serviceType.findServiceType(TEST_RPC_SERVICE_TYPE_CODE)).thenReturn(TEST_RPC_SERVICE_TYPE);
+        serviceTypeRegistryService = serviceType;
 
-            @Override
-            public ServiceType findServiceTypeByName(String typeName) {
-                throw new UnsupportedOperationException();
-            }
+        AnnotationKeyRegistryService annotationKey = mock(AnnotationKeyRegistryService.class);
+        Mockito.when(annotationKey.findAnnotationKeyByName(anyString())).thenReturn(TEST_RPC_URL_ANNOTATION_KEY);
+        annotationKeyRegistryService = annotationKey;
 
-            @Override
-            public List<ServiceType> findDesc(String desc) {
-                throw new UnsupportedOperationException();
-            }
-        };
-        annotationKeyRegistryService = new AnnotationKeyRegistryService() {
-            @Override
-            public AnnotationKey findAnnotationKey(int annotationCode) {
-                throw new UnsupportedOperationException();
-            }
-
-            @Override
-            public AnnotationKey findAnnotationKeyByName(String keyName) {
-                return TEST_RPC_URL_ANNOTATION_KEY;
-            }
-
-            @Override
-            public AnnotationKey findApiErrorCode(int annotationCode) {
-                throw new UnsupportedOperationException();
-            }
-        };
     }
 
 
@@ -98,7 +77,7 @@ public class RpcURLPatternFilterTest {
         // When
         boolean accept = rpcURLPatternFilter.accept(createTestRpcSpans(rpcUrl));
         // Then
-        Assert.assertFalse(accept);
+        Assertions.assertFalse(accept);
     }
 
     @Test
@@ -110,7 +89,7 @@ public class RpcURLPatternFilterTest {
         // When
         boolean accept = rpcURLPatternFilter.accept(createTestRpcSpans(rpcUrl));
         // Then
-        Assert.assertTrue(accept);
+        Assertions.assertTrue(accept);
     }
 
     @Test
@@ -122,7 +101,7 @@ public class RpcURLPatternFilterTest {
         // When
         boolean accept = rpcURLPatternFilter.accept(createTestRpcSpans(rpcUrl));
         // Then
-        Assert.assertTrue(accept);
+        Assertions.assertTrue(accept);
     }
 
     @Test
@@ -134,7 +113,7 @@ public class RpcURLPatternFilterTest {
         // When
         boolean accept = rpcURLPatternFilter.accept(createTestRpcSpans(rpcUrl));
         // Then
-        Assert.assertTrue(accept);
+        Assertions.assertTrue(accept);
     }
 
     @Test
@@ -146,7 +125,7 @@ public class RpcURLPatternFilterTest {
         // When
         boolean accept = rpcURLPatternFilter.accept(createTestRpcSpans(rpcUrl));
         // Then
-        Assert.assertTrue(accept);
+        Assertions.assertTrue(accept);
     }
 
     @Test
@@ -158,7 +137,7 @@ public class RpcURLPatternFilterTest {
         // When
         boolean accept = rpcURLPatternFilter.accept(createTestRpcSpans(rpcUrl));
         // Then
-        Assert.assertTrue(accept);
+        Assertions.assertTrue(accept);
     }
 
     private List<SpanBo> createTestRpcSpans(String... rpcUrls) {
@@ -167,7 +146,7 @@ public class RpcURLPatternFilterTest {
             SpanEventBo testRpcSpanEvent = new SpanEventBo();
             testRpcSpanEvent.setServiceType(TEST_RPC_SERVICE_TYPE_CODE);
             AnnotationBo testRpcAnnotationBo = new AnnotationBo(TEST_RPC_URL_ANNOTATION_KEY.getCode(), rpcUrl);
-            testRpcSpanEvent.setAnnotationBoList(Collections.singletonList(testRpcAnnotationBo));
+            testRpcSpanEvent.setAnnotationBoList(List.of(testRpcAnnotationBo));
             SpanBo spanBo = new SpanBo();
             spanBo.addSpanEvent(testRpcSpanEvent);
             spanBos.add(spanBo);
