@@ -19,19 +19,18 @@ package com.navercorp.pinpoint.web.mapper.stat;
 import com.navercorp.pinpoint.common.server.bo.stat.JvmGcBo;
 import com.navercorp.pinpoint.web.mapper.stat.sampling.sampler.JvmGcSampler;
 import com.navercorp.pinpoint.web.vo.stat.SampledJvmGc;
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
 /**
  * @author HyunGil Jeong
  */
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class JvmGcSamplerTest {
 
     private static final Random RANDOM = new Random();
@@ -49,7 +48,7 @@ public class JvmGcSamplerTest {
         long gcTime = randomGcTime() + previousGcTime;
         JvmGcBo jvmGcBo = createJvmGcBoForGcTest(gcCount, gcTime);
 
-        List<JvmGcBo> jvmGcBos = Arrays.asList(jvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(jvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -59,8 +58,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = gcTime - previousGcTime;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -70,7 +69,7 @@ public class JvmGcSamplerTest {
         long gcTime = randomGcTime();
         JvmGcBo jvmGcBo = createJvmGcBoForGcTest(gcCount, gcTime);
 
-        List<JvmGcBo> jvmGcBos = Arrays.asList(jvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(jvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, null);
@@ -80,8 +79,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = 0L;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -99,7 +98,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo, firstJvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo, firstJvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -109,8 +108,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = secondGcTime - previousGcTime;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -124,7 +123,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo, firstJvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo, firstJvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, null);
@@ -134,8 +133,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = secondGcTime - firstGcTime;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -163,7 +162,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, secondGcCount_2, secondGcTime_2);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo_2, firstJvmGcBo_2, secondJvmGcBo_1, firstJvmGcBo_1);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo_2, firstJvmGcBo_2, secondJvmGcBo_1, firstJvmGcBo_1);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -177,8 +176,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = gcTimesBeforeJvmRestart + gcTimesAfterJvmRestart;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -202,7 +201,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, secondGcCount_2, secondGcTime_2);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo_2, firstJvmGcBo_2, secondJvmGcBo_1, firstJvmGcBo_1);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo_2, firstJvmGcBo_2, secondJvmGcBo_1, firstJvmGcBo_1);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, null);
@@ -216,8 +215,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = gcTimesBeforeJvmRestart + gcTimesAfterJvmRestart;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -238,7 +237,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo, uncollectedJvmGcBo3, uncollectedJvmGcBo2, firstJvmGcBo, uncollectedJvmGcBo1);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo, uncollectedJvmGcBo3, uncollectedJvmGcBo2, firstJvmGcBo, uncollectedJvmGcBo1);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -248,8 +247,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = secondGcTime - previousGcTime;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -265,7 +264,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
         JvmGcBo uncollectedJvmGcBo3 = createJvmGcBoForGcTest(JvmGcBo.UNCOLLECTED_VALUE, JvmGcBo.UNCOLLECTED_VALUE);
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(uncollectedJvmGcBo3, secondJvmGcBo, uncollectedJvmGcBo2, uncollectedJvmGcBo1, firstJvmGcBo);
+        List<JvmGcBo> jvmGcBos = List.of(uncollectedJvmGcBo3, secondJvmGcBo, uncollectedJvmGcBo2, uncollectedJvmGcBo1, firstJvmGcBo);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, null);
@@ -275,8 +274,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = secondGcTime - firstGcTime;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
 
     }
 
@@ -295,7 +294,7 @@ public class JvmGcSamplerTest {
         JvmGcBo secondJvmGcBo = createJvmGcBoForGcTest(secondGcCount, secondGcTime);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(secondJvmGcBo, uncollectedJvmGcBo2, firstJvmGcBo, uncollectedJvmGcBo1);
+        List<JvmGcBo> jvmGcBos = List.of(secondJvmGcBo, uncollectedJvmGcBo2, firstJvmGcBo, uncollectedJvmGcBo1);
 
         // When
         SampledJvmGc sampledJvmGc = sampler.sampleDataPoints(0, System.currentTimeMillis(), jvmGcBos, previousJvmGcBo);
@@ -305,8 +304,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = secondGcTime - firstGcTime;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -338,7 +337,7 @@ public class JvmGcSamplerTest {
         JvmGcBo uncollectedJvmGcBo2_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, JvmGcBo.UNCOLLECTED_VALUE, JvmGcBo.UNCOLLECTED_VALUE);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(
+        List<JvmGcBo> jvmGcBos = List.of(
                 uncollectedJvmGcBo2_2, thirdJvmGcBo_2, secondJvmGcBo_2, firstJvmGcBo_2, uncollectedJvmGcBo1_2,
                 uncollectedJvmGcBo2_1, firstJvmGcBo_1, uncollectedJvmGcBo1_1
         );
@@ -355,8 +354,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = gcTimesBeforeJvmRestart + gcTimesAfterJvmRestart;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -384,7 +383,7 @@ public class JvmGcSamplerTest {
         JvmGcBo uncollectedJvmGcBo2_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, JvmGcBo.UNCOLLECTED_VALUE, JvmGcBo.UNCOLLECTED_VALUE);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(
+        List<JvmGcBo> jvmGcBos = List.of(
                 uncollectedJvmGcBo2_2, thirdJvmGcBo_2, secondJvmGcBo_2, uncollectedJvmGcBo1_2, firstJvmGcBo_2,
                 uncollectedJvmGcBo2_1, firstJvmGcBo_1, uncollectedJvmGcBo1_1
         );
@@ -401,8 +400,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = gcTimesBeforeJvmRestart + gcTimesAfterJvmRestart;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
     }
 
     @Test
@@ -435,7 +434,7 @@ public class JvmGcSamplerTest {
         JvmGcBo uncollectedJvmGcBo2_2 = createJvmGcBoForGcTest(secondAgentStartTimestamp, JvmGcBo.UNCOLLECTED_VALUE, JvmGcBo.UNCOLLECTED_VALUE);
 
         // must be in descending order
-        List<JvmGcBo> jvmGcBos = Arrays.asList(
+        List<JvmGcBo> jvmGcBos = List.of(
                 uncollectedJvmGcBo2_2, thirdJvmGcBo_2, secondJvmGcBo_2, uncollectedJvmGcBo1_2, firstJvmGcBo_2,
                 uncollectedJvmGcBo2_1, secondJvmGcBo_1, firstJvmGcBo_1, uncollectedJvmGcBo1_1
         );
@@ -452,8 +451,8 @@ public class JvmGcSamplerTest {
         long expectedGcTime = gcTimesBeforeJvmRestart + gcTimesAfterJvmRestart;
         long actualGcCount = sampledJvmGc.getGcOldCount().getSumYVal();
         long actualGcTime = sampledJvmGc.getGcOldTime().getSumYVal();
-        Assert.assertEquals(expectedGcCount, actualGcCount);
-        Assert.assertEquals(expectedGcTime, actualGcTime);
+        Assertions.assertEquals(expectedGcCount, actualGcCount);
+        Assertions.assertEquals(expectedGcTime, actualGcTime);
 
     }
 
