@@ -18,33 +18,37 @@ package com.navercorp.pinpoint.web.service.map;
 
 import com.navercorp.pinpoint.common.server.bo.SpanBo;
 import com.navercorp.pinpoint.common.server.bo.SpanEventBo;
-import com.navercorp.pinpoint.loader.service.ServiceTypeRegistryService;
+import com.navercorp.pinpoint.common.server.util.time.Range;
 import com.navercorp.pinpoint.common.trace.ServiceType;
+import com.navercorp.pinpoint.loader.service.ServiceTypeRegistryService;
 import com.navercorp.pinpoint.web.TestTraceUtils;
+import com.navercorp.pinpoint.web.applicationmap.link.LinkKey;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkData;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkDataDuplexMap;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkDataMap;
 import com.navercorp.pinpoint.web.service.ApplicationFactory;
 import com.navercorp.pinpoint.web.service.DefaultApplicationFactory;
 import com.navercorp.pinpoint.web.vo.Application;
-import com.navercorp.pinpoint.web.vo.LinkKey;
-import com.navercorp.pinpoint.web.vo.Range;
 import com.navercorp.pinpoint.web.vo.ResponseHistograms;
 import com.navercorp.pinpoint.web.vo.ResponseTime;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * @author HyunGil Jeong
  */
-@RunWith(MockitoJUnitRunner.Silent.class)
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class FilteredMapBuilderTest {
 
     private static final Random RANDOM = new Random();
@@ -56,7 +60,7 @@ public class FilteredMapBuilderTest {
 
     private ApplicationFactory applicationFactory;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         this.applicationFactory = new DefaultApplicationFactory(registry);
     }
@@ -67,7 +71,7 @@ public class FilteredMapBuilderTest {
     @Test
     public void twoTier() {
         // Given
-        final Range range = new Range(1, 200000);
+        final Range range = Range.between(1, 200000);
         final FilteredMapBuilder builder = new FilteredMapBuilder(applicationFactory, registry, range, VERSION);
 
         // root app span
@@ -105,7 +109,7 @@ public class FilteredMapBuilderTest {
         appASpan.addSpanEvent(appACacheSpanEvent);
 
         // When
-        builder.addTransaction(Arrays.asList(rootSpan, appASpan));
+        builder.addTransaction(List.of(rootSpan, appASpan));
         FilteredMap filteredMap = builder.build();
 
         // Then
@@ -131,25 +135,26 @@ public class FilteredMapBuilderTest {
         ResponseHistograms responseHistograms = filteredMap.getResponseHistograms();
         Application rootApplication = new Application("ROOT_APP", registry.findServiceType(TestTraceUtils.TEST_STAND_ALONE_TYPE_CODE));
         List<ResponseTime> rootAppResponseTimes = responseHistograms.getResponseTimeList(rootApplication);
-        Assert.assertNotNull(rootAppResponseTimes);
-        Assert.assertEquals(1, rootAppResponseTimes.size());
+
+        assertThat(rootAppResponseTimes).hasSize(1);
+
         Application applicationA = new Application("APP_A", registry.findServiceType(TestTraceUtils.TEST_STAND_ALONE_TYPE_CODE));
         List<ResponseTime> appAResponseTimes = responseHistograms.getResponseTimeList(applicationA);
-        Assert.assertNotNull(appAResponseTimes);
-        Assert.assertEquals(1, appAResponseTimes.size());
+
+        assertThat(appAResponseTimes).hasSize(1);
     }
 
     private void assertSourceLinkData(LinkDataMap sourceLinkDataMap, String fromApplicationName, ServiceType fromServiceType, String toApplicationName, ServiceType toServiceType) {
-        LinkKey linkKey = new LinkKey(fromApplicationName, fromServiceType, toApplicationName, toServiceType);
+        LinkKey linkKey = LinkKey.of(fromApplicationName, fromServiceType, toApplicationName, toServiceType);
         LinkData sourceLinkData = sourceLinkDataMap.getLinkData(linkKey);
         String assertMessage = String.format("%s[%s] to %s[%s] source link data does not exist", fromApplicationName, fromServiceType.getName(), toApplicationName, toServiceType.getName());
-        Assert.assertNotNull(assertMessage, sourceLinkData);
+        Assertions.assertNotNull(sourceLinkData, assertMessage);
     }
 
     private void assertTargetLinkData(LinkDataMap targetLinkDataMap, String fromApplicationName, ServiceType fromServiceType, String toApplicationName, ServiceType toServiceType) {
-        LinkKey linkKey = new LinkKey(fromApplicationName, fromServiceType, toApplicationName, toServiceType);
+        LinkKey linkKey = LinkKey.of(fromApplicationName, fromServiceType, toApplicationName, toServiceType);
         LinkData targetLinkData = targetLinkDataMap.getLinkData(linkKey);
         String assertMessage = String.format("%s[%s] from %s[%s] target link data does not exist", toApplicationName, toServiceType.getName(), fromApplicationName, fromServiceType.getName());
-        Assert.assertNotNull(assertMessage, targetLinkData);
+        Assertions.assertNotNull(targetLinkData, assertMessage);
     }
 }
