@@ -17,9 +17,11 @@
 package com.navercorp.pinpoint.web.service.map;
 
 import com.google.common.collect.Sets;
+import com.navercorp.pinpoint.common.server.util.time.Range;
 import com.navercorp.pinpoint.common.trace.ServiceType;
 import com.navercorp.pinpoint.common.trace.ServiceTypeFactory;
 import com.navercorp.pinpoint.common.trace.ServiceTypeProperty;
+import com.navercorp.pinpoint.web.applicationmap.link.LinkKey;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkCallData;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkData;
 import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkDataDuplexMap;
@@ -27,15 +29,10 @@ import com.navercorp.pinpoint.web.applicationmap.rawdata.LinkDataMap;
 import com.navercorp.pinpoint.web.dao.HostApplicationMapDao;
 import com.navercorp.pinpoint.web.service.LinkDataMapService;
 import com.navercorp.pinpoint.web.vo.Application;
-import com.navercorp.pinpoint.web.vo.LinkKey;
-import com.navercorp.pinpoint.web.vo.Range;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Random;
@@ -44,6 +41,8 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
@@ -63,7 +62,7 @@ public abstract class LinkSelectorTestBase {
 
     protected final ServiceType testRpcServiceType = ServiceTypeFactory.of(9000, "TEST_RPC_CLIENT", ServiceTypeProperty.RECORD_STATISTICS);
 
-    protected final Range range = new Range(0, 100);
+    protected final Range range = Range.between(0, 100);
 
     protected LinkDataMapService linkDataMapService;
     protected HostApplicationMapDao hostApplicationMapDao;
@@ -71,14 +70,14 @@ public abstract class LinkSelectorTestBase {
 
     protected abstract LinkSelectorType getLinkSelectorType();
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         this.linkDataMapService = mock(LinkDataMapService.class);
         this.hostApplicationMapDao = mock(HostApplicationMapDao.class);
         this.linkSelectorFactory = new LinkSelectorFactory(linkDataMapService, applicationsMapCreatorFactory, hostApplicationMapDao);
     }
 
-    @After
+    @AfterEach
     public void cleanUp() {
         executor.shutdown();
         try {
@@ -96,21 +95,21 @@ public abstract class LinkSelectorTestBase {
     }
 
     @Test
-    public void testEmpty() throws Exception {
+    public void testEmpty() {
         Application APP_A = new Application("APP_A", ServiceType.TEST_STAND_ALONE);
         when(linkDataMapService.selectCallerLinkDataMap(any(Application.class), any(Range.class))).thenReturn(newEmptyLinkDataMap());
         when(linkDataMapService.selectCalleeLinkDataMap(any(Application.class), any(Range.class))).thenReturn(newEmptyLinkDataMap());
         when(hostApplicationMapDao.findAcceptApplicationName(any(Application.class), any(Range.class))).thenReturn(new HashSet<>());
 
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap select = linkSelector.select(Collections.singletonList(APP_A), range, 1, 1);
+        LinkDataDuplexMap select = linkSelector.select(List.of(APP_A), range, 1, 1);
 
-        Assert.assertEquals(select.size(), 0);
-        Assert.assertEquals(select.getTotalCount(), 0);
+        assertEquals(select.size(), 0);
+        assertEquals(select.getTotalCount(), 0);
     }
 
     @Test
-    public void testCaller() throws Exception {
+    public void testCaller() {
         // APP_A -> APP_B
         final Application APP_A = new Application("APP_A", ServiceType.TEST_STAND_ALONE);
         final Application APP_B = new Application("APP_B", ServiceType.TEST_STAND_ALONE);
@@ -126,19 +125,19 @@ public abstract class LinkSelectorTestBase {
         when(hostApplicationMapDao.findAcceptApplicationName(any(Application.class), any(Range.class))).thenReturn(new HashSet<>());
 
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData = linkSelector.select(Collections.singletonList(APP_A), range, 1, 1);
+        LinkDataDuplexMap linkData = linkSelector.select(List.of(APP_A), range, 1, 1);
 
-        Assert.assertEquals(linkData.size(), 1);
-        Assert.assertEquals(linkData.getTotalCount(), callCount_A_B);
+        assertEquals(linkData.size(), 1);
+        assertEquals(linkData.getTotalCount(), callCount_A_B);
 
-        Assert.assertEquals(linkData.getSourceLinkDataList().size(), 1);
-        Assert.assertEquals(linkData.getSourceLinkDataMap().getTotalCount(), callCount_A_B);
+        assertThat(linkData.getSourceLinkDataList()).hasSize(1);
+        assertEquals(linkData.getSourceLinkDataMap().getTotalCount(), callCount_A_B);
 
-        Assert.assertEquals(linkData.getTargetLinkDataList().size(), 0);
+        assertThat(linkData.getTargetLinkDataList()).isEmpty();
     }
 
     @Test
-    public void testCaller_multiple() throws Exception {
+    public void testCaller_multiple() {
         // APP_A -> TARGET_1, TARGET_2, ...
         final Application APP_A = new Application("APP_A", ServiceType.TEST_STAND_ALONE);
         int numTargets = RANDOM.nextInt(100);
@@ -158,19 +157,19 @@ public abstract class LinkSelectorTestBase {
         when(hostApplicationMapDao.findAcceptApplicationName(any(Application.class), any(Range.class))).thenReturn(new HashSet<>());
 
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData = linkSelector.select(Collections.singletonList(APP_A), range, 1, 1);
+        LinkDataDuplexMap linkData = linkSelector.select(List.of(APP_A), range, 1, 1);
 
-        Assert.assertEquals(linkData.size(), numTargets);
-        Assert.assertEquals(linkData.getTotalCount(), numTargets * callCount_A_APP);
+        assertEquals(linkData.size(), numTargets);
+        assertEquals(linkData.getTotalCount(), numTargets * callCount_A_APP);
 
-        Assert.assertEquals(linkData.getSourceLinkDataList().size(), numTargets);
-        Assert.assertEquals(linkData.getSourceLinkDataMap().getTotalCount(), numTargets * callCount_A_APP);
+        assertThat(linkData.getSourceLinkDataList()).hasSize(numTargets);
+        assertEquals(linkData.getSourceLinkDataMap().getTotalCount(), numTargets * callCount_A_APP);
 
-        Assert.assertEquals(linkData.getTargetLinkDataList().size(), 0);
+        assertThat(linkData.getTargetLinkDataList()).isEmpty();
     }
 
     @Test
-    public void testCaller_3tier() throws Exception {
+    public void testCaller_3tier() {
         // APP_A -> APP_B -> APP_C
         final Application APP_A = new Application("APP_A", ServiceType.TEST_STAND_ALONE);
         final Application APP_B = new Application("APP_B", ServiceType.TEST_STAND_ALONE);
@@ -196,22 +195,22 @@ public abstract class LinkSelectorTestBase {
 
         // depth 1
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData = linkSelector.select(Collections.singletonList(APP_A), range, 1, 1);
+        LinkDataDuplexMap linkData = linkSelector.select(List.of(APP_A), range, 1, 1);
 
-        Assert.assertEquals(linkData.size(), 1);
-        Assert.assertEquals(linkData.getTotalCount(), callCount_A_B);
+        assertEquals(linkData.size(), 1);
+        assertEquals(linkData.getTotalCount(), callCount_A_B);
 
-        Assert.assertEquals(linkData.getSourceLinkDataList().size(), 1);
-        Assert.assertEquals(linkData.getSourceLinkDataMap().getTotalCount(), callCount_A_B);
+        assertThat(linkData.getSourceLinkDataList()).hasSize(1);
+        assertEquals(linkData.getSourceLinkDataMap().getTotalCount(), callCount_A_B);
         assertSource_Target_TotalCount("APP_A->APP_B", linkData, new LinkKey(APP_A, APP_B), callCount_A_B);
 
-        Assert.assertEquals(linkData.getTargetLinkDataList().size(), 0);
+        assertThat(linkData.getTargetLinkDataList()).isEmpty();
 
         // depth 2
         LinkSelector linkSelector2 = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData_depth2 = linkSelector2.select(Collections.singletonList(APP_A), range, 2, 2);
-        Assert.assertEquals(linkData_depth2.size(), 2);
-        Assert.assertEquals(linkData_depth2.getTotalCount(), callCount_A_B + callCount_B_C);
+        LinkDataDuplexMap linkData_depth2 = linkSelector2.select(List.of(APP_A), range, 2, 2);
+        assertEquals(linkData_depth2.size(), 2);
+        assertEquals(linkData_depth2.getTotalCount(), callCount_A_B + callCount_B_C);
 
         LinkKey linkKey_A_B = new LinkKey(APP_A, APP_B);
         assertSource_Target_TotalCount("APP_A->APP_B", linkData_depth2, linkKey_A_B, callCount_A_B);
@@ -221,7 +220,7 @@ public abstract class LinkSelectorTestBase {
     }
 
     @Test
-    public void testCaller_rpc() throws Exception {
+    public void testCaller_rpc() {
         // APP_A -> APP_B via "www.test.com/test"
         // Given
         final Application APP_A = new Application("APP_A", ServiceType.TEST_STAND_ALONE);
@@ -244,29 +243,29 @@ public abstract class LinkSelectorTestBase {
 
         // When
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData = linkSelector.select(Collections.singletonList(APP_A), range, 1, 1);
+        LinkDataDuplexMap linkData = linkSelector.select(List.of(APP_A), range, 1, 1);
 
         // Then
-        Assert.assertEquals(1, linkData.size());
-        Assert.assertEquals(callCount_A_B, linkData.getTotalCount());
+        assertEquals(1, linkData.size());
+        assertEquals(callCount_A_B, linkData.getTotalCount());
 
-        Assert.assertEquals(1, linkData.getSourceLinkDataList().size());
-        Assert.assertEquals(callCount_A_B, linkData.getSourceLinkDataMap().getTotalCount());
+        assertThat(linkData.getSourceLinkDataList()).hasSize(1);
+        assertEquals(callCount_A_B, linkData.getSourceLinkDataMap().getTotalCount());
 
-        Assert.assertEquals(0, linkData.getTargetLinkDataList().size());
+        assertThat(linkData.getTargetLinkDataList()).isEmpty();
 
         LinkData linkData_A_B = linkData.getSourceLinkData(new LinkKey(APP_A, APP_B));
-        Assert.assertEquals(callCount_A_B, linkData_A_B.getTotalCount());
+        assertEquals(callCount_A_B, linkData_A_B.getTotalCount());
 
-        List<LinkCallData> callDatas = new ArrayList<>(linkData_A_B.getLinkCallDataMap().getLinkDataList());
-        Assert.assertEquals(1, callDatas.size());
+        List<LinkCallData> callDatas = List.copyOf(linkData_A_B.getLinkCallDataMap().getLinkDataList());
+        assertThat(callDatas).hasSize(1);
         LinkCallData callData = callDatas.get(0);
-        Assert.assertEquals(rpcUri, callData.getTarget());
-        Assert.assertEquals(testRpcServiceType, callData.getTargetServiceType());
+        assertEquals(rpcUri, callData.getTarget().getName());
+        assertEquals(testRpcServiceType, callData.getTarget().getServiceType());
     }
 
     @Test
-    public void testCallee() throws Exception {
+    public void testCallee() {
         // APP_A -> APP_B
         final Application APP_A = new Application("APP_A", ServiceType.TEST_STAND_ALONE);
         final Application APP_B = new Application("APP_B", ServiceType.TEST_STAND_ALONE);
@@ -282,19 +281,19 @@ public abstract class LinkSelectorTestBase {
         when(hostApplicationMapDao.findAcceptApplicationName(any(Application.class), any(Range.class))).thenReturn(new HashSet<>());
 
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData = linkSelector.select(Collections.singletonList(APP_B), range, 1, 1);
+        LinkDataDuplexMap linkData = linkSelector.select(List.of(APP_B), range, 1, 1);
 
-        Assert.assertEquals(linkData.size(), 1);
-        Assert.assertEquals(linkData.getTotalCount(), callCount_A_B);
+        assertEquals(linkData.size(), 1);
+        assertEquals(linkData.getTotalCount(), callCount_A_B);
 
-        Assert.assertEquals(linkData.getSourceLinkDataList().size(), 0);
+        assertThat(linkData.getSourceLinkDataList()).isEmpty();
 
-        Assert.assertEquals(linkData.getTargetLinkDataList().size(), 1);
-        Assert.assertEquals(linkData.getTargetLinkDataMap().getTotalCount(), callCount_A_B);
+        assertThat(linkData.getTargetLinkDataList()).hasSize(1);
+        assertEquals(linkData.getTargetLinkDataMap().getTotalCount(), callCount_A_B);
     }
 
     @Test
-    public void testCallee_3tier() throws Exception {
+    public void testCallee_3tier() {
         // APP_A -> APP_B -> APP_C
         final Application APP_A = new Application("APP_A", ServiceType.TEST_STAND_ALONE);
         final Application APP_B = new Application("APP_B", ServiceType.TEST_STAND_ALONE);
@@ -321,20 +320,20 @@ public abstract class LinkSelectorTestBase {
         when(hostApplicationMapDao.findAcceptApplicationName(any(Application.class), any(Range.class))).thenReturn(new HashSet<>());
 
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData = linkSelector.select(Collections.singletonList(APP_C), range, 1, 1);
+        LinkDataDuplexMap linkData = linkSelector.select(List.of(APP_C), range, 1, 1);
 
-        Assert.assertEquals(linkData.size(), 1);
-        Assert.assertEquals(linkData.getTotalCount(), callCount_B_C);
+        assertEquals(linkData.size(), 1);
+        assertEquals(linkData.getTotalCount(), callCount_B_C);
 
-        Assert.assertEquals(linkData.getSourceLinkDataList().size(), 0);
+        assertThat(linkData.getSourceLinkDataList()).isEmpty();
 
-        Assert.assertEquals(linkData.getTargetLinkDataList().size(), 1);
-        Assert.assertEquals(linkData.getTotalCount(), callCount_B_C);
+        assertThat(linkData.getTargetLinkDataList()).hasSize(1);
+        assertEquals(linkData.getTotalCount(), callCount_B_C);
 
         // depth 2
         LinkSelector linkSelector2 = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData_depth2 = linkSelector2.select(Collections.singletonList(APP_C), range, 2, 2);
-        Assert.assertEquals(linkData_depth2.size(), 2);
+        LinkDataDuplexMap linkData_depth2 = linkSelector2.select(List.of(APP_C), range, 2, 2);
+        assertEquals(linkData_depth2.size(), 2);
 
         LinkKey linkKey_A_B = new LinkKey(APP_A, APP_B);
         assertTarget_Source_TotalCount("APP_A->APP_B", linkData_depth2, linkKey_A_B, callCount_A_B);
@@ -344,7 +343,7 @@ public abstract class LinkSelectorTestBase {
     }
 
     @Test
-    public void testVirtual() throws Exception {
+    public void testVirtual() {
         // APP_A ---> APP_B via "www.test.com/test"
         //        |-> APP_C via "www.test.com/test"
         // Given
@@ -384,29 +383,29 @@ public abstract class LinkSelectorTestBase {
 
         // When
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData = linkSelector.select(Collections.singletonList(APP_A), range, 1, 1);
+        LinkDataDuplexMap linkData = linkSelector.select(List.of(APP_A), range, 1, 1);
 
         // Then
         LinkData linkData_A_B = linkData.getSourceLinkData(new LinkKey(APP_A, APP_B));
         LinkData linkData_A_C = linkData.getSourceLinkData(new LinkKey(APP_A, APP_C));
-        Assert.assertEquals(callCount_A_B, linkData_A_B.getTotalCount());
-        Assert.assertEquals(callCount_A_C, linkData_A_C.getTotalCount());
+        assertEquals(callCount_A_B, linkData_A_B.getTotalCount());
+        assertEquals(callCount_A_C, linkData_A_C.getTotalCount());
 
-        List<LinkCallData> callData_A_Bs = new ArrayList<>(linkData_A_B.getLinkCallDataMap().getLinkDataList());
-        Assert.assertEquals(1, callData_A_Bs.size());
+        List<LinkCallData> callData_A_Bs = List.copyOf(linkData_A_B.getLinkCallDataMap().getLinkDataList());
+        assertThat(callData_A_Bs).hasSize(1);
         LinkCallData callData_A_B = callData_A_Bs.get(0);
-        Assert.assertEquals(rpcUri, callData_A_B.getTarget());
-        Assert.assertEquals(testRpcServiceType, callData_A_B.getTargetServiceType());
+        assertEquals(rpcUri, callData_A_B.getTarget().getName());
+        assertEquals(testRpcServiceType, callData_A_B.getTarget().getServiceType());
 
-        List<LinkCallData> callData_A_Cs = new ArrayList<>(linkData_A_C.getLinkCallDataMap().getLinkDataList());
-        Assert.assertEquals(1, callData_A_Cs.size());
+        List<LinkCallData> callData_A_Cs = List.copyOf(linkData_A_C.getLinkCallDataMap().getLinkDataList());
+        assertThat(callData_A_Cs).hasSize(1);
         LinkCallData callData_A_C = callData_A_Cs.get(0);
-        Assert.assertEquals(rpcUri, callData_A_C.getTarget());
-        Assert.assertEquals(testRpcServiceType, callData_A_C.getTargetServiceType());
+        assertEquals(rpcUri, callData_A_C.getTarget().getName());
+        assertEquals(testRpcServiceType, callData_A_C.getTarget().getServiceType());
     }
 
     @Test
-    public void testVirtual_mixed() throws Exception {
+    public void testVirtual_mixed() {
         // APP_A ---> APP_B via "api.test.com/test", "b.test.com/test"
         //        |-> APP_C via "api.test.com/test", "c.test.com/test"
         // Given
@@ -464,7 +463,7 @@ public abstract class LinkSelectorTestBase {
 
         // When
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData = linkSelector.select(Collections.singletonList(APP_A), range, 1, 1);
+        LinkDataDuplexMap linkData = linkSelector.select(List.of(APP_A), range, 1, 1);
 
         // Then
         assertSource_Target_TotalCount("APP_A -> APP_B", linkData, new LinkKey(APP_A, APP_B), callCount_proxy_B + callCount_B);
@@ -475,10 +474,9 @@ public abstract class LinkSelectorTestBase {
 
     /**
      * For situations where virtual nodes are visited, but their callee data are not fetched due to callee search limit.
-     * @throws Exception
      */
     @Test
-    public void testVirtual_3tier_callee_limited() throws Exception {
+    public void testVirtual_3tier_callee_limited() {
         // APP_A ---> APP_B via "gw.test.com/api" ---> APP_D via "api.test.com/test
         //        |-> APP_C via "gw.test.com/api" -|
         // Given
@@ -545,33 +543,33 @@ public abstract class LinkSelectorTestBase {
 
         // When
         LinkSelector linkSelector = linkSelectorFactory.createLinkSelector(getLinkSelectorType());
-        LinkDataDuplexMap linkData = linkSelector.select(Collections.singletonList(APP_A), range, 2, 1);
+        LinkDataDuplexMap linkData = linkSelector.select(List.of(APP_A), range, 2, 1);
 
         // Then
         LinkData linkData_A_B = linkData.getSourceLinkData(new LinkKey(APP_A, APP_B));
         LinkData linkData_A_C = linkData.getSourceLinkData(new LinkKey(APP_A, APP_C));
-        Assert.assertEquals(callCount_A_B, linkData_A_B.getTotalCount());
-        Assert.assertEquals(callCount_A_C, linkData_A_C.getTotalCount());
+        assertEquals(callCount_A_B, linkData_A_B.getTotalCount());
+        assertEquals(callCount_A_C, linkData_A_C.getTotalCount());
         LinkData linkData_B_D = linkData.getSourceLinkData(new LinkKey(APP_B, APP_D));
-        Assert.assertEquals(callCount_B_D, linkData_B_D.getTotalCount());
+        assertEquals(callCount_B_D, linkData_B_D.getTotalCount());
         LinkData linkData_C_D = linkData.getSourceLinkData(new LinkKey(APP_C, APP_D));
-        Assert.assertEquals(callCount_C_D, linkData_C_D.getTotalCount());
+        assertEquals(callCount_C_D, linkData_C_D.getTotalCount());
 
         LinkData targetLinkData_A_B = linkData.getTargetLinkData(new LinkKey(APP_A, APP_B));
         LinkData targetLinkData_A_C = linkData.getTargetLinkData(new LinkKey(APP_A, APP_C));
-        Assert.assertEquals(callCount_A_B, targetLinkData_A_B.getTotalCount());
-        Assert.assertEquals(callCount_A_C, targetLinkData_A_C.getTotalCount());
+        assertEquals(callCount_A_B, targetLinkData_A_B.getTotalCount());
+        assertEquals(callCount_A_C, targetLinkData_A_C.getTotalCount());
     }
 
     private void assertTarget_Source_TotalCount(String message, LinkDataDuplexMap linkData, LinkKey linkKey, long count) {
         LinkData sourceLinkData = linkData.getTargetLinkData(linkKey);
         long totalCount = sourceLinkData.getTotalCount();
-        Assert.assertEquals(message, totalCount, count);
+        assertEquals(totalCount, count, message);
     }
 
     private void assertSource_Target_TotalCount(String message, LinkDataDuplexMap linkData, LinkKey linkKey, long count) {
         LinkData sourceLinkData = linkData.getSourceLinkData(linkKey);
         long totalCount = sourceLinkData.getTotalCount();
-        Assert.assertEquals(message, totalCount, count);
+        assertEquals(totalCount, count, message);
     }
 }
