@@ -16,18 +16,15 @@
 
 package com.navercorp.pinpoint.web.vo.timeline.inspector;
 
-import com.navercorp.pinpoint.common.server.bo.event.AgentEventBo;
-import com.navercorp.pinpoint.common.server.util.AgentEventType;
 import com.navercorp.pinpoint.common.server.util.AgentLifeCycleState;
-import com.navercorp.pinpoint.web.vo.AgentEvent;
-import com.navercorp.pinpoint.web.vo.AgentStatus;
-import com.navercorp.pinpoint.web.vo.Range;
-import org.junit.Assert;
-import org.junit.Test;
+import com.navercorp.pinpoint.common.server.util.time.Range;
+import com.navercorp.pinpoint.web.vo.agent.AgentStatus;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * @author Taejin Koo
@@ -39,6 +36,7 @@ public class AgentStatusTimelineBuilderTest {
     private static final long DIFF = TO - FROM;
 
     private static final AgentStatus DEFAULT_STATUS;
+
     static {
         DEFAULT_STATUS = createAgentStatus(0, AgentLifeCycleState.RUNNING);
     }
@@ -46,18 +44,18 @@ public class AgentStatusTimelineBuilderTest {
     @Test
     public void defaultTest1() {
         // Given
-        Range timelineRange = new Range(FROM, TO);
+        Range timelineRange = Range.between(FROM, TO);
 
         // When
         long startTime = getRandomLong(FROM + 1, FROM + (DIFF / 2));
         long endTime = getRandomLong(startTime, TO - 1);
         AgentStatusTimelineSegment timelineSegment = createTimelineSegment(startTime, endTime);
 
-        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, Arrays.asList(timelineSegment)).build();
+        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, List.of(timelineSegment)).build();
 
         // Then
         List<AgentStatusTimelineSegment> actualTimelineSegmentList = timeline.getTimelineSegments();
-        Assert.assertTrue(actualTimelineSegmentList.size() == 3);
+        assertThat(actualTimelineSegmentList).hasSize(3);
 
         AgentStatusTimelineSegment first = actualTimelineSegmentList.get(0);
         assertTimelineSegment(first, FROM, startTime, AgentState.RUNNING);
@@ -72,7 +70,7 @@ public class AgentStatusTimelineBuilderTest {
     @Test
     public void defaultTest2() {
         // Given
-        Range timelineRange = new Range(FROM, TO);
+        Range timelineRange = Range.between(FROM, TO);
 
         // When
         long firstStartTime = ThreadLocalRandom.current().nextLong(FROM + 1, FROM + (DIFF / 4));
@@ -83,11 +81,11 @@ public class AgentStatusTimelineBuilderTest {
         long secondEndTime = ThreadLocalRandom.current().nextLong(secondStartTime + 1, TO - 1);
         AgentStatusTimelineSegment timelineSegment2 = createTimelineSegment(secondStartTime, secondEndTime);
 
-        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, Arrays.asList(timelineSegment1, timelineSegment2)).build();
+        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, List.of(timelineSegment1, timelineSegment2)).build();
 
         // Then
         List<AgentStatusTimelineSegment> actualTimelineSegmentList = timeline.getTimelineSegments();
-        Assert.assertTrue(actualTimelineSegmentList.size() == 5);
+        assertThat(actualTimelineSegmentList).hasSize(5);
 
         AgentStatusTimelineSegment first = actualTimelineSegmentList.get(0);
         assertTimelineSegment(first, FROM, firstStartTime, AgentState.RUNNING);
@@ -108,17 +106,17 @@ public class AgentStatusTimelineBuilderTest {
     @Test
     public void boundaryValueTest1() {
         // Given
-        Range timelineRange = new Range(FROM, TO);
+        Range timelineRange = Range.between(FROM, TO);
 
         // When
         long endTime = getRandomLong(FROM + 1, TO - 1);
         AgentStatusTimelineSegment timelineSegment = createTimelineSegment(FROM, endTime);
 
-        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, Arrays.asList(timelineSegment)).build();
+        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, List.of(timelineSegment)).build();
 
         // Then
         List<AgentStatusTimelineSegment> actualTimelineSegmentList = timeline.getTimelineSegments();
-        Assert.assertTrue(actualTimelineSegmentList.size() == 2);
+        assertThat(actualTimelineSegmentList).hasSize(2);
 
         AgentStatusTimelineSegment unstableTimelineSegment = actualTimelineSegmentList.get(0);
         assertTimelineSegment(unstableTimelineSegment, FROM, endTime, AgentState.UNSTABLE_RUNNING);
@@ -130,17 +128,17 @@ public class AgentStatusTimelineBuilderTest {
     @Test
     public void boundaryValueTest2() {
         // Given
-        Range timelineRange = new Range(FROM, TO);
+        Range timelineRange = Range.between(FROM, TO);
 
         // When
         long startTime = ThreadLocalRandom.current().nextLong(FROM + 1, FROM + (DIFF / 2));
         AgentStatusTimelineSegment timelineSegment = createTimelineSegment(startTime, TO);
 
-        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, Arrays.asList(timelineSegment)).build();
+        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, List.of(timelineSegment)).build();
 
         // Then
         List<AgentStatusTimelineSegment> actualTimelineSegmentList = timeline.getTimelineSegments();
-        Assert.assertTrue(actualTimelineSegmentList.size() == 2);
+        assertThat(actualTimelineSegmentList).hasSize(2);
 
         AgentStatusTimelineSegment first = actualTimelineSegmentList.get(0);
         assertTimelineSegment(first, FROM, startTime, AgentState.RUNNING);
@@ -152,18 +150,18 @@ public class AgentStatusTimelineBuilderTest {
     @Test
     public void overBoundaryValueTest1() {
         // Given
-        Range timelineRange = new Range(FROM, TO);
+        Range timelineRange = Range.between(FROM, TO);
 
         // When
         long warningEndTime = ThreadLocalRandom.current().nextLong(FROM, TO);
 
         AgentStatusTimelineSegment timelineSegment = createTimelineSegment(FROM - 1, warningEndTime);
 
-        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, Arrays.asList(timelineSegment)).build();
+        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, List.of(timelineSegment)).build();
 
         // Then
         List<AgentStatusTimelineSegment> actualTimelineSegmentList = timeline.getTimelineSegments();
-        Assert.assertTrue(actualTimelineSegmentList.size() == 1);
+        assertThat(actualTimelineSegmentList).hasSize(1);
 
         AgentStatusTimelineSegment timelineSegment1 = actualTimelineSegmentList.get(0);
         assertTimelineSegment(timelineSegment1, FROM, TO, AgentState.RUNNING);
@@ -172,26 +170,26 @@ public class AgentStatusTimelineBuilderTest {
     @Test
     public void overBoundaryValueTest2() {
         // Given
-        Range timelineRange = new Range(FROM, TO);
+        Range timelineRange = Range.between(FROM, TO);
 
         // When
         long warningStartTime = ThreadLocalRandom.current().nextLong(FROM, TO);
         AgentStatusTimelineSegment timelineSegment = createTimelineSegment(warningStartTime, TO + 1);
 
-        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, Arrays.asList(timelineSegment)).build();
+        AgentStatusTimeline timeline = new AgentStatusTimelineBuilder(timelineRange, DEFAULT_STATUS, null, List.of(timelineSegment)).build();
 
         // Then
         List<AgentStatusTimelineSegment> actualTimelineSegmentList = timeline.getTimelineSegments();
-        Assert.assertTrue(actualTimelineSegmentList.size() == 1);
+        assertThat(actualTimelineSegmentList).hasSize(1);
 
         AgentStatusTimelineSegment timelineSegment1 = actualTimelineSegmentList.get(0);
         assertTimelineSegment(timelineSegment1, FROM, TO, AgentState.RUNNING);
     }
 
     private void assertTimelineSegment(AgentStatusTimelineSegment timelineSegment, long startTime, long endTime, AgentState state) {
-        Assert.assertEquals(startTime, timelineSegment.getStartTimestamp());
-        Assert.assertEquals(endTime, timelineSegment.getEndTimestamp());
-        Assert.assertEquals(state, timelineSegment.getValue());
+        assertThat(timelineSegment)
+                .extracting(AgentStatusTimelineSegment::getStartTimestamp, AgentStatusTimelineSegment::getEndTimestamp, AgentStatusTimelineSegment::getValue)
+                .containsExactly(startTime, endTime, state);
     }
 
     private AgentStatusTimelineSegment createTimelineSegment(long startTimestamp, long endTimestamp) {
@@ -204,15 +202,9 @@ public class AgentStatusTimelineBuilderTest {
     }
 
     private static AgentStatus createAgentStatus(long timestamp, AgentLifeCycleState state) {
-        AgentStatus agentStatus = new AgentStatus("testAgent");
-        agentStatus.setEventTimestamp(timestamp);
-        agentStatus.setState(state);
-        return agentStatus;
+        return new AgentStatus("testAgent", state, timestamp);
     }
 
-    private AgentEvent createAgentEvent(long agentStartTimestamp, long timestamp, AgentEventType agentEventType) {
-        return new AgentEvent(new AgentEventBo("testAgentId", agentStartTimestamp, timestamp, agentEventType));
-    }
 
     private AgentStatusTimelineSegment createSegment(long startTimestamp, long endTimestamp, AgentState state) {
         AgentStatusTimelineSegment segment = new AgentStatusTimelineSegment();
